@@ -12,8 +12,8 @@
 			<Property Name="Size" Value="w:0.96 h:0.96" /> 
 			<Property Name="InheritsAlpha" Value="True" /> 
 			<Window Type="TaharezLook/StaticText" Name="Info">
-				<Property Name="Position" Value="x:0 y:0" /> 
-				<Property Name="Size" Value="w:1 h:0.2" /> 
+				<Property Name="Position" Value="x:0 y:0.05" /> 
+				<Property Name="Size" Value="w:1 h:0.15" /> 
 				<Property Name="InheritsAlpha" Value="false" /> 
 				<Property Name="ReadOnly" Value="true" /> 
 				<Property Name="VertFormatting" Value="TopAligned" /> 
@@ -57,18 +57,33 @@
 					<Property Name="InheritsAlpha" Value="True" /> 
 				</Window>
 								
+				<Window Type="TaharezLook/StaticText" Name="LoginPanel/HelpText">
+					<Property Name="AbsolutePosition" Value="x:30 y:200" /> 
+					<Property Name="AbsoluteSize" Value="w:300 h:150" /> 
+					<Property Name="Text" Value="If this is your first visit to this server you must create an account. Enter the name and password you want and press 'Create'.
+
+If you already have an account, proceed with a normal login." /> 
+					<Property Name="InheritsAlpha" Value="True" /> 
+					<Property Name="FrameEnabled" Value="False" /> 
+					<Property Name="BackgroundEnabled" Value="False" /> 
+					<Property Name="VertFormatting" Value="TopAligned" /> 
+					<Property Name="HorzFormatting" Value="WordWrapLeftAligned" /> 
+					
+				</Window>
 				
 				<Window Type="TaharezLook/Button" Name="LoginPanel/Login">
 					<Property Name="AbsolutePosition" Value="x:30 y:160" /> 
 					<Property Name="AbsoluteSize" Value="w:100 h:20" /> 
 					<Property Name="Text" Value="Login" /> 
 					<Property Name="InheritsAlpha" Value="True" /> 
+					<Property Name="Tooltip" Value="Login with an already existing account." /> 
 				</Window>
 				<Window Type="TaharezLook/Button" Name="LoginPanel/CreateAcc">
 					<Property Name="AbsolutePosition" Value="x:140 y:160" /> 
 					<Property Name="AbsoluteSize" Value="w:100 h:20" /> 
 					<Property Name="Text" Value="Create" /> 
 					<Property Name="InheritsAlpha" Value="True" /> 
+					<Property Name="Tooltip" Value="Create a new account on the server." /> 
 				</Window>
 			</Window>
 			
@@ -99,6 +114,17 @@
 						<Property Name="Text" Value="Choose" /> 
 						<Property Name="InheritsAlpha" Value="True" /> 
 					</Window>
+					<Window Type="TaharezLook/StaticText" Name="ChooseCharacterPanel/HelpText">
+						<Property Name="Position" Value="x:0.55 y:0.05" /> 
+						<Property Name="Size" Value="w:0.4 h:0.5" /> 
+						<Property Name="Text" Value="Choose an already existing character from the list, or switch to the 'create' tab to create a new character." /> 
+						<Property Name="InheritsAlpha" Value="True" /> 
+						<Property Name="FrameEnabled" Value="False" /> 
+						<Property Name="BackgroundEnabled" Value="False" /> 
+						<Property Name="VertFormatting" Value="TopAligned" /> 
+						<Property Name="HorzFormatting" Value="WordWrapLeftAligned" /> 
+						
+				</Window>					
 				</Window>
 				<Window Type="DefaultGUISheet" Name="CreateCharacterPanel">
 					<Property Name="Position" Value="x:0 y:0" /> 
@@ -118,6 +144,7 @@
 						<Property Name="AbsoluteSize" Value="w:100 h:20" /> 
 						<Property Name="Text" Value="" /> 
 						<Property Name="InheritsAlpha" Value="True" /> 
+						<Property Name="Tooltip" Value="The name of the character." /> 
 					</Window>
 					
 					<Window Type="TaharezLook/StaticText" Name="CreateCharacterPanel/TypeText">
@@ -133,6 +160,7 @@
 						<Property Name="AbsoluteSize" Value="w:100 h:200" /> 
 						<Property Name="InheritsAlpha" Value="True" /> 
 						<Property Name="ReadOnly" Value="true" /> 
+						<Property Name="Tooltip" Value="The type of character to create." /> 
 					</Window>
 					<Window Type="TaharezLook/StaticText" Name="CreateCharacterPanel/GenderText">
 						<Property Name="AbsolutePosition" Value="x:0 y:60" /> 
@@ -167,6 +195,7 @@
 						<Property Name="AbsolutePosition" Value="x:100 y:90" /> 
 						<Property Name="AbsoluteSize" Value="w:250 h:100" /> 
 						<Property Name="InheritsAlpha" Value="True" /> 
+						<Property Name="Tooltip" Value="A short description of the character." /> 
 					</Window>
 					
 					
@@ -175,6 +204,8 @@
 						<Property Name="AbsoluteSize" Value="w:100 h:20" /> 
 						<Property Name="Text" Value="Create" /> 
 						<Property Name="InheritsAlpha" Value="True" /> 
+						<Property Name="Tooltip" Value="Create a new character." /> 
+						
 					</Window>
 				</Window>
 			</Window>
