@@ -1,3 +1,13 @@
+2005-09-23  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* src/components/ogre/ServerWidget.cpp, src/components/ogre/widgets/ServerWidget.xml
+		* added more tooltips and some more helpful texts
+		* if the logged in used has no characters yet, start by showing the "create char" tab instead of the "choose char" tab (since the list is empty anyway)
+
+2005-09-23  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* configfile: get the media from amber.worldforge.org which should be much more stable than folke.ostgota.lu.se
+
 2005-09-21  Erik Hjortsberg  <erik@katastrof.nu>
 
 	*  ember.conf: set better looking fog values and added option for the fog colour
